# plasma-mobile

./: .arcconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  logo.png.license  main.cpp  metadata.desktop  org.kde.plasma.mobileshell.metainfo.xml  plasma-mobile.desktop.cmake  plasma-mobile.service  plasma-phone-components.kdev4  plasma_phone_components.notifyrc  plasmaapp.cpp  plasmaapp.h  recommendation.cpp  recommendationaction.cpp  recommendationmanager.cpp  singleview.cpp  singleview.h
applets/: CMakeLists.txt
applets/active-welcome/: .gitignore  CMakeLists.txt  Messages.sh  metadata.desktop
applets/activities/: Messages.sh  metadata.desktop
applets/activitieslist/: CMakeLists.txt  plasma-applet-activitieslist.desktop
applets/addons/: CMakeLists.txt  plasma-applet-addons-qml.desktop
applets/alarms/: CMakeLists.txt  active-alarms.desktop
applets/appswitcher/: CMakeLists.txt  Messages.sh  appswitcher.cpp  appswitcher.h  plasma-applet-appswitcher.desktop
applets/battery/: CMakeLists.txt  Messages.sh
applets/batterymonitor/: CMakeLists.txt  plasma-applet-batterymonitor.desktop
applications/: CMakeLists.txt  icon-template.svgz
autotests/: CMakeLists.txt  urlmodeltest.cpp
bindings/: CMakeLists.txt  datasource.cpp  datasource.h  graphicswidgetsbindingsplugin.cpp  graphicswidgetsbindingsplugin.h  plasmabindings.cpp  plasmabindings.h  qmldir
components/: ActionButton.qml  AppearAnimation.qml  CMakeLists.txt  HomeScreenControls.qml  IconButton.qml  IconDelegate.qml  IconGrid.qml  Messages.sh  Rating.qml  RatingIcon.qml  ResourceDelegate.qml  ViewSearch.qml  activitythumbnail.h  appletcontainer.cpp  appletcontainer.h  appletstatuswatcher.cpp  appletstatuswatcher.h  fallbackcomponent.cpp  fullscreenpanel.cpp  fullscreenpanel.h  mobilecomponentsplugin.cpp  mobilecomponentsplugin.h  mobileshellprivateplugin.h  mouseeventlistener.cpp  mouseeventlistener.h  package.cpp  package.h  pagedproxymodel.cpp  pagedproxymodel.h  qmldir  resourceinstance.cpp  resourceinstance.h  texteffects.cpp  texteffects.h
contourd/: CMakeLists.txt  config-features.h.cmake  contour-recommendationengine-qtscript.desktop  contour-recommendationengine.desktop  contour.desktop  main.cpp
dataengine/: CMakeLists.txt  nepomukmobileengine.cpp  nepomukmobileengine.h  org.kde.contour.RecommendationManager.xml  plasma-dataengine-nepomukmobile.desktop  testsource.cpp
dbus/: CMakeLists.txt  org.kde.kded5.service  org.kde.kglobalaccel.service  org.kde.klauncher5.service  org.kde.kuiserver.service
desktoptheme/: CMakeLists.txt  metadata.desktop
envmanager/: CMakeLists.txt  config.h  devicepresets.cpp  devicepresets.h  main.cpp  settings.cpp  settings.h  utils.cpp  utils.h
initialstart/: CMakeLists.txt  Messages.sh  initialstartmodule.cpp  initialstartmodule.h  initialstartutil.h  main.cpp  resources.qrc  settings.cpp  settings.h  wizard.cpp  wizard.h
kded/: CMakeLists.txt  config.h  kded_plasma-mobile-start.json  kded_plasma_mobile_start.json  settings.cpp  settings.h  start.cpp  startdaemon.cpp  startdaemon.h  utils.h
libmobileshell/: CMakeLists.txt  LibMobileShellConfig.cmake.in  displaysmodel.cpp  displaysmodel.h  homescreen.cpp  homescreen.h  homescreenmodel.cpp  homescreenmodel.h  kwinvirtualkeyboardinterface.cpp  kwinvirtualkeyboardinterface.h  mobileshellsettings.cpp  mobileshellsettings.h  quicksetting.cpp  quicksetting.h  quicksettingsmodel.cpp  quicksettingsmodel.h  savedquicksettings.cpp  savedquicksettings.h  savedquicksettingsmodel.cpp  savedquicksettingsmodel.h  shellutil.cpp  shellutil.h
mobilebusynotifier/: CMakeLists.txt  Messages.sh  busyapp.cpp  busyapp.h  busywidget.cpp  busywidget.h  main.cpp  mobilebusynotifier.desktop
qmlcomponents/: CMakeLists.txt  Messages.sh  applicationlistmodel.cpp  applicationlistmodel.h  favoritesmodel.cpp  favoritesmodel.h  qmldir  satellitecomponentsplugin.cpp  satellitecomponentsplugin.h
qmlengine/: CMakeLists.txt  Messages.sh  appletinterface.cpp  appletinterface.h  dataengine.h  engineaccess.cpp  engineaccess.h  plasma-appletscript-qml.desktop  plasma-packagestructure-qml.desktop  plasma-scriptengine-applet-declartive.desktop  qmlappletscript.cpp  qmlappletscript.h  qmlpackage.cpp  qmlpackage.h  qscriptnonguibookkeeping.cpp  variant.cpp  variant.h
qtmobilityfeeder/: CMakeLists.txt  activitymanager-plugin-qtmobilityfeeder.desktop  qtmobilityfeeder.cpp  qtmobilityfeeder.h
quicksettings/: CMakeLists.txt
services/: CMakeLists.txt  README  kactivitymanagerd.service.cmake  kded5.service.cmake  kdeinit5.service.cmake  kglobalaccel5.service.cmake  kuiserver5.service.cmake  plasma-phone-compositor.service  plasma-phone-compositor.service.cmake  plasma-phone-kbuildsycoca5.service  plasma-phone-kded5.service  plasma-phone-kdeinit.service  plasma-phone-ksyncdbusenv.service  plasma-phone-shell.service  plasma-phone-ui.service  plasma-phone-ui.service.cmake  plasma-phone.service.cmake
shell/: CMakeLists.txt  Messages.sh  activity.cpp  activity.h  busywidget.cpp  busywidget.h  cachingeffect.cpp  cachingeffect.h  declarativepanel.cpp  declarativepanel.h  inputcontext.cpp  inputcontext.h  kactivityconsumer.h  kactivitycontroller.h  kactivityinfo.h  main.cpp  metadata.desktop  metadata.json  metadata.json.license  mobcorona.cpp  mobcorona.h  mobdialogmanager.cpp  mobdialogmanager.h  mobpluginloader.cpp  mobpluginloader.h  mobview.cpp  mobview.h  org.kde.PlasmaKeyboardShell.xml  panelproxy.cpp  panelproxy.h  panelshadows.cpp  panelshadows.h  plasma-active.desktop  plasma-default-layoutrc  plasma-mobile-qml.qrc  plasma-mobile.desktop  plasmaapp.cpp  plasmaapp.h
src/: CMakeLists.txt  bookmarksmanager.cpp  bookmarksmanager.h  browsermanager.cpp  browsermanager.h  main.cpp  url.h  urlmodel.cpp  urlmodel.h  view.cpp  view.h
touchscreentest/: CMakeLists.txt  main.cpp  main.qml  org.kde.touchtest.desktop
widgetstrip-shell/: CMakeLists.txt  Messages.sh  main.cpp  plasma-default-layoutrc  plasmaapp.cpp  plasmaapp.h  singleview.cpp  singleview.h  stripcorona.cpp  stripcorona.h  widget-strip.desktop
(+5451 files in other folders)
