installPackage(active-welcome org.kde.active.welcome)
installPackage(notifications org.kde.active.notifications)
installPackage(powerbutton org.kde.active.powerbutton)
installPackage(resourcelist org.kde.resourcelist)
installPackage(digitalclock org.kde.digitalclock)

add_subdirectory(alarms)
add_subdirectory(locationchooser)
